syntax = "proto3";

option go_package = "protos/permissions";

message PermissionsRequest { string user_id = 1; }

message Permissions {
  string id = 1;
  string title = 2;
  string description = 3;
}

message PermissionsResponse { repeated Permissions permissions = 1; }
